# indooruav_waypoint_manager

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml
data/: waypoints.json
doc/: doc.drawio
include/indooruav_waypoint_manager/: recorder.hpp  waypoint.hpp  waypoint_manager.hpp
launch/: bringup_indooruav_waypoint_manager.launch
src/: main.cpp  recorder.cpp  waypoint_manager.cpp
