<?xml version="1.0"?>
<package format="2">
  <name>indooruav_waypoint_manager</name>
  <version>1.0.0</version>
  <description>
    订阅全局里程计话题，当累计位移达到 ΔL 或经过时间达到 ΔT 时，
    自动记录机器人位姿（航点），并将所有航点序列化输出为 JSON 文件。
  </description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
</package>
